syntax = "proto3";

package user;
option java_package = "com.proto.user";
option java_multiple_files = true;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 userId = 1;
    string username = 2;
    string email = 4;
    string phone = 5;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string phone = 4;
}

message RegisterResponse {
    int32 userId = 1;
    string username = 2;
    string email = 4;
    string phone = 5;
}

message ExistsByIdRequest {
    int32 userId = 1;
}
message ExistsByIdResponse {
    bool exists = 1;
}

service UserService {
    rpc login(LoginRequest) returns(LoginResponse) {}
    rpc register(RegisterRequest) returns (RegisterResponse) {}
    rpc existsById(ExistsByIdRequest) returns (ExistsByIdResponse) {}
}